Fixed badge status spacing and new update button static

--- a/source/msteams-app-questionly/src/app/scripts/askAwayTab/index.scss
+++ b/source/msteams-app-questionly/src/app/scripts/askAwayTab/index.scss
@@ -42,16 +42,11 @@
         margin-bottom: auto;
     }
     .newUpdatesButton {
-        top: 12%;
-        display: block;
+        top: 6.2rem;
         position: absolute;
-        text-align: center;
-        z-index: 99;
-        transform: translateX(40%);
-    }
-    .newUpdatesButtonContent {
-        font-size: medium;
-        font-weight: normal;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        height: 1.85rem;
     }
     .menuHeader {
         .ui-menu__item__submenu {
@@ -113,15 +108,15 @@
 
 .badge {
     width: 3.75rem;
-    font-family: Segoe UI semibold;
+    font-family: Segoe UI;
+    font-weight: 600;
     font-size: 10px;
-    padding: 0.43em 0.5em;
+    padding: 0.35em 0.5em;
     line-height: 12px;
     white-space: nowrap;
     vertical-align: baseline;
     border-radius: 0.75rem;
     text-align: center;
-    margin-bottom: 0.25rem;
 }
 
 .tab-config-container {
@@ -169,6 +164,7 @@
         }
     }
     .tab-nav-header {
+        padding: '10px 14px 0px 17px';
         .btn-end-session {
             margin-right: 1rem;
             height: 2rem;
@@ -185,6 +181,13 @@
     .tab-container {
         margin: 0 auto;
         width: 54.2%;
+        .newUpdatesButton {
+            top: 16rem;
+            position: absolute;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            height: 1.85rem;
+        }
         .post-new-question {
             margin-top: 2rem;
             padding: 0.1rem;
@@ -200,11 +203,15 @@
                 width: 100%;
                 box-shadow: 0px 0.15px 0.45px rgba(0, 0, 0, 0.11), 0px 0.8px 1.8px rgba(0, 0, 0, 0.13);
                 border-radius: 4px;
+                .badge {
+                    font-size: 12px;
+                    font-weight: bold;
+                }
                 .ui-card__body {
                     margin-bottom: 0.3rem;
                 }
                 .date-content-format {
-                    padding-top: 0.15rem;
+                    padding-top: 0.25rem;
                 }
                 .session-title {
                     padding-top: 0.3rem;
@@ -229,9 +236,8 @@
                     right: 1rem;
                 }
                 .text-format {
-                    position: relative;
-                    top: -0.5rem;
-                    padding-left: 0.2rem;
+                    padding-top: 0rem;
+                    padding-right: 1rem;
                 }
             }
             .padding-none {
@@ -324,18 +330,6 @@
         font-size: 12px;
         padding-bottom: 3px;
         padding-top: 3px;
-    }
-}
-
-.tab-content {
-    .newUpdatesButton {
-        top: 45%;
-        display: block;
-        position: absolute;
-        text-align: center;
-        z-index: 99;
-        left: 50%;
-        transform: translate(-50%, -50%);
     }
 }
 
